--- a/Views/admin.html
+++ b/Views/admin.html
@@ -310,6 +310,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#" data-section="home"><i class="bi bi-house-door"></i> Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="signOutLink"><i class="bi bi-box-arrow-right"></i> Sign Out</a>
+        </li>
       </ul>
     </nav>
 
