--- a/Views/admin.html
+++ b/Views/admin.html
@@ -241,7 +241,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            border-radius: 50%;
+            border-radius: 5px; /* Changed to square */
             padding: 0;
             transition: opacity 0.3s;
         }
@@ -269,6 +269,9 @@
     }
     .status-cancelled {
       background-color: #DB4444;
+    }
+    .btn-profile {
+      display: none; /* Hide profile button */
     }
   </style>
 </head>
